# eeeedgar

./: README.md
lab-1/: README.md
lab-1/AlgoBenchmarking/CSharpBenchmarking/: CSharpBenchmarking.sln
lab-1/BackupsAnalyze/: BackupsAnalyze.sln
lab-1/BackupsAnalyze/BackupsAnalyze/: BackupsAnalyze.csproj  Program.cs
lab-1/InternalInterop/FSharpToCSharp/: FSharpToCSharp.sln
lab-1/Interop/CppToJava/CppLibrary/: CMakeLists.txt  com_eeee_Main.cpp  com_eeee_Main.h
lab-3/AnalyzerTemplate/AnalyzerTemplate/: AnalyzerI7Array.cs  AnalyzerI7List.cs  AnalyzerI7Yield.cs  AnalyzerO8.cs  Resources.Designer.cs  Resources.resx
lab-3/AnalyzerTemplate/AnalyzerTemplate.CodeFixes/: AnalyzerTemplate.CodeFixes.csproj  CodeFixProviderI7Array.cs  CodeFixProviderI7List.cs  CodeFixProviderI7Yield.cs  CodeFixProviderO8.cs  CodeFixResources.Designer.cs  CodeFixResources.resx
lab-3/AnalyzerTemplate/AnalyzerTemplate.Test/: AnalyzerI7ArrayUnitTests.cs  AnalyzerI7ListUnitTests.cs  AnalyzerI7YieldUnitTests.cs  AnalyzerO8UnitTests.cs
lab-4/: GeneticAlgo.sln  README.md
lab-4/GeneticAlgo.AvaloniaInterface/: App.axaml.cs
lab-4/GeneticAlgo.AvaloniaInterface/ViewModels/: MainWindowViewModel.cs
lab-4/GeneticAlgo.Benchmarking/: GeneticAlgo.Benchmarking.csproj  GeneticAlgoBenchmark.cs  Program.cs
lab-4/GeneticAlgo.Runner/: GeneticAlgo.Runner.csproj  Program.cs
lab-4/GeneticAlgo.Shared/Models/: Trajectory.cs
lab-4/GeneticAlgo.Shared/Tools/: GeneticMath.cs  SolutionFindingExecutionContext.cs
lab-4/GeneticAlgo.WpfInterface/: MainWindow.xaml.cs
(+32 files in other folders)
